# lumen

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  Dockerfile  LOADTESTING.md  PLAN.md  README.md  asgi.py  config.py  config.yaml.example  dev.config.yaml  dev.sh  docker-compose.yml  docker-compose.yml.example  entrypoint.sh  lumen.yaml  models.yaml.example  pyproject.toml  requirements.txt  run.py  seed_analytics.py  sync_models.py  todo.md  uptoken.sh
.github/workflows/: docker.yml  test.yml
app/: __init__.py  commands.py  decorators.py  extensions.py
app/models/: __init__.py  api_key.py  conversation.py  entity.py  entity_manager.py  entity_model_balance.py  group_member.py  message.py  model_config.py  model_endpoint.py  model_limit.py  model_stat.py
app/services/: cost.py  health.py  llm.py  token_refill.py
app/templates/: base.html  chat.html  landing.html  models.html  services.html  usage.html
chart/: Chart.yaml  README.md  values.schema.json  values.yaml
chart/templates/: NOTES.txt  _helpers.tpl  config-secret.yaml  configmap.yaml  deployment.yaml  httproute.yaml  ingress.yaml  migration-job.yaml  models-deployment.yaml  models-prefetch-job.yaml  models-pvc.yaml  models-service.yaml  secret.yaml  service.yaml  serviceaccount.yaml
docs/: architecture.md  dbschema.md  introduction.md  loadtesting.md  nav.json
docs/admin/: config-application.md  config-clients.md  config-models.md  config-projects.md  config-users.md  config.md
docs/clients/: clients-detail.md  clients.md
docs/guides/: api-reference.md  chat.md  connect.md  profile.md  usage.md
docs/models/: model-detail.md  models.md
docs/projects/: projects-detail.md  projects.md
illm/: __init__.py  commands.py
illm/models/: conversation.py  entity_model_limit.py  group.py  group_member.py  group_model_limit.py  message.py  model_config.py
illm/services/: config_watcher.py  health.py  llm.py  token_refill.py
illm/templates/: base.html  chat.html  (+3 more)
loadtesting/: README.md  dummy_backend.py  locustfile.py  run_loadtest.sh  runner.py  setup_users.py
lumen/: __init__.py  commands.py  decorators.py  extensions.py  timeutils.py
scripts/: README.md  screenshot.config.yaml  screenshot_seed.py  screenshots.py  smoke_test.py
tests/: conftest.py
(+205 files in other folders)
