[project]
name = "lumen"
version = "1.11.1"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "flask-sqlalchemy>=3.1",
    "flask-migrate>=4.0",
    "openai>=1.0",
    "python-dotenv>=1.0",
    "psycopg2-binary>=2.9",
    "pyyaml>=6.0",
    "authlib>=1.3",
    "requests>=2.31",
    "uvicorn>=0.30",
    "a2wsgi>=1.10",
    "flask-limiter>=3.5",
    "prometheus_client>=0.20",
    "pypdf>=4.0",
    "filetype>=1.2",
    "markdown>=3.6",
    "flask-wtf>=1.2",
    "bleach>=6.0",
]

[project.scripts]
lumen = "run:main"
dummy = "loadtesting.dummy_backend:main"
locust = "loadtesting.runner:main"

[dependency-groups]
dev = [
    "locust>=2.28",
    "pytest>=8.0",
    "pytest-flask>=1.3",
    "pytest-cov>=5.0",
    "beautifulsoup4>=4.12",
    "playwright>=1.59.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=lumen --cov-report=term-missing -q"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
